Remaining_files/justintimeoutproxy/acmeair-mainservice-java/manifests-istio/deploy-acmeair-istio.yaml
##### Yash's Client ######
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    sidecar.istio.io/inject: "false"
  name: yclient
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yclient
  template:
    metadata:
      labels:
        app: yclient
    spec:
      containers:
        - name: yclient
          image: registry.gitlab.com/justintimeout/acmejavaclient/acme-client:latest          
          imagePullPolicy: Always
      imagePullSecrets:
        - name: regcred3
---

###### Broker Service ######
apiVersion: v1
kind: Service
metadata:
  name: broker2
  namespace: default  
  labels:
    app: broker2
spec:
  ports:
    - port: 5000
      name: http
  selector:
    app: broker2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    sidecar.istio.io/inject: "false"
  name: broker2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: broker2
  template:
    metadata:
      labels:
        app: broker2
    spec:
      containers:
        - name: broker2
          image: registry.gitlab.com/justintimeout/justintimeoutbroker/broker:latest          
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
              name: http
          resources:
                requests:
                  memory: "256Mi"
                  cpu: "1500m"
      imagePullSecrets:
        - name: regcred3
---

apiVersion: v1
kind: Service
metadata:
  name: probbroker
  namespace: default  
  labels:
    app: probbroker
spec:
  ports:
    - port: 5000
      name: http
  selector:
    app: probbroker
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    sidecar.istio.io/inject: "false"
  name: probbroker
spec:
  replicas: 3
  selector:
    matchLabels:
      app: probbroker
  template:
    metadata:
      labels:
        app: probbroker
    spec:
      containers:
        - name: probbroker          
          image: registry.gitlab.com/justintimeout/probbroker/probbroker:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
              name: http
      imagePullSecrets:
        - name: regcred3
---

###### Main Service ######
apiVersion: v1
kind: Service
metadata:
  name: main
  namespace: default
  labels:
    app: main
spec:
  ports:
    - port: 9080
      name: http
  selector:
    app: main
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main
spec:
  replicas: 1
  selector:
    matchLabels:
      app: main
  template:
    metadata:
      labels:
        app: main
    spec:
      containers:
        - name: main
          image: registry.gitlab.com/justintimeout/justintimeoutproxy/acme-main:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9080
      imagePullSecrets:
        - name: regcred3
---
###### Flight Service ######
apiVersion: v1
kind: Service
metadata:
  name: flight
  labels:
    app: flight
spec:
  ports:
    - port: 9080
      name: http
  selector:
    app: flight
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flight
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flight
  template:
    metadata:
      labels:
        app: flight
    spec:
      containers:
        - name: flight
          image: registry.gitlab.com/justintimeout/justintimeoutproxy/acme-flight:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9080
          resources:
              limits:
            #    memory: "256Mi"
                cpu: "250m"
      imagePullSecrets:
        - name: regcred3
---
###### Booking Service ######
apiVersion: v1
kind: Service
metadata:
  name: booking
  labels:
    app: booking
spec:
  ports:
    - port: 9080
      name: http
  selector:
    app: booking
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: booking
  template:
    metadata:
      labels:
        app: booking
    spec:
      containers:
        - env:
          - name: JVM_ARGS
            value: "-Dcom.acmeair.client.CustomerClient/mp-rest/url=http://customer:9080/customer -Dcom.acmeair.client.FlightClient/mp-rest/url=http://flight:9080/flight -Dmp.jwt.verify.publickey.location=http://auth:9080/auth/getJwk"
          - name: MONGO_HOST
            value: booking-db
          - name: USERNAME
            value: admin
          - name: PASSWORD
            value: password
          - name: TRACK_REWARD_MILES
            value: 'true'
          - name: SECURE_SERVICE_CALLS
            value: 'true'
          name: booking
          image: registry.gitlab.com/justintimeout/justintimeoutproxy/acme-bookingservice:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9080
      imagePullSecrets:
        - name: regcred3
---
###### Customer Service ######
apiVersion: v1
kind: Service
metadata:
  name: customer
  labels:
    app: customer
spec:
  ports:
    - port: 9080
      name: http
  selector:
    app: customer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer
  template:
    metadata:
      labels:
        app: customer
    spec:
      containers:
        - name: customer
          image: registry.gitlab.com/justintimeout/justintimeoutproxy/acme-customerservice:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9080
      imagePullSecrets:
        - name: regcred3
---
###### Auth Service ######
apiVersion: v1
kind: Service
metadata:
  name: auth
  labels:
    app: auth
spec:
  ports:
    - port: 9080
      name: http
  selector:
    app: auth
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - env:
        - name: JVM_ARGS
          #value: "-Dcom.acmeair.client.CustomerClient/mp-rest/url=http://customer:9080/customer"
          value: "-DcustomerClient/mp-rest/url=http://customer:9080/customer"
        name: auth
        image: registry.gitlab.com/justintimeout/justintimeoutproxy/acme-auth:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 9080
      imagePullSecrets:
        - name: regcred3
---
##### Flight Database #####
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    service: flight-db
    app: flight-db
  name: flight-db
spec:
  ports:
  - name: "27017"
    port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    service: flight-db
    app: flight-db
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  name: flight-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flight-db
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        service: flight-db
        app: flight-db
    spec:
      containers:
      - image: mongo
        name: flight-db
        ports:
        - containerPort: 27017
          protocol: TCP
        resources: {}
      restartPolicy: Always
status: {}
---
##### Booking Database  #####
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    service: booking-db
    app: booking-db
  name: booking-db
spec:
  ports:
  - name: "27017"
    port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    service: booking-db
    app: booking-db
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  name: booking-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: booking-db
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        service: booking-db
        app: booking-db
    spec:
      containers:
      - image: mongo
        name: booking-db
        ports:
        - containerPort: 27017
          protocol: TCP
        resources: {}
      restartPolicy: Always
status: {}
---
##### Customer Database #####
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    service: customer-db
    app: customer-db
  name: customer-db
spec:
  ports:
  - name: "27017"
    port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    service: customer-db
    app: customer-db
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  name: customer-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer-db
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        service: customer-db
        app: customer-db
    spec:
      containers:
      - image: mongo
        name: customer-db
        ports:
        - containerPort: 27017
          protocol: TCP
        resources: {}
      restartPolicy: Always
status: {}
---
##################################################################
# Gateway
##################################################################
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: acmeair-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
###################################################################
# Virtual Services
###################################################################
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: acmeair
spec:
  hosts:
  - "*"
  gateways:
  - acmeair-gateway
  http:
  - match:
    - uri:
        prefix: /probtimeout
    route:
    - destination:
        port:
          number: 5000
        host: probbroker
  - match:
    - uri:
        prefix: /gettimeout
    route:
    - destination:
        port:
          number: 5000
        host: broker2
  - match:
    - uri:
        prefix: /flight
    route:
    - destination:
        port:
          number: 9080
        host: flight
  - match:
    - uri:
        prefix: /booking
    route:
    - destination:
        port:
          number: 9080
        host: booking
  - match:
    - uri:
        prefix: /customer
    route:
    - destination:
        port:
          number: 9080
        host: customer
  - match:
    - uri:
        prefix: /auth
    route:
    - destination:
        port:
          number: 9080
        host: auth
  - match:
    - uri:
        prefix: /acmeair
    route:
    - destination:
        port:
          number: 9080
        host: main
---
